[package]
name = "mipsasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["cargo", "derive"] }
regex = "1.6.0"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.32"

[lib]
name = "mipsasm"
path = "src/lib.rs"

[[bin]]
name = "mipsasm"
path = "src/bin/bin.rs"
