[package]
name = "mipsasm"
description = "A MIPS assembler targeting the N64"
documentation = "https://docs.rs/mipsasm"
repository = "https://github.com/imaandrew/mipsasm/"
version = "2.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["mipsasm", "mips", "assembler", "assembly", "n64"]
categories = ["command-line-utilities", "encoding", "hardware-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["cargo", "derive"] }
indexmap = "1.9.1"
num = "0.4.0"
once_cell = "1.15.0"
regex = "1.6.0"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.32"

[lib]
name = "mipsasm"
path = "src/lib.rs"

[[bin]]
name = "mipsasm"
path = "src/bin/bin.rs"
